# lhd042

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: generate-icons.js  generate-png-icons.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: LockScreen.vue  PasswordConfirmDialog.vue  StatusConfirmDialog.vue
src/layout/: index.vue
src/router/: index.ts
src/stores/: app.ts
src/styles/: index.scss  variables.scss
src/types/: index.ts
src/utils/: careAI.ts  encryption.ts  index.ts  storage.ts
src/views/: Achievements.vue  CareSuggestions.vue  Dashboard.vue  Diary.vue  DiaryDetail.vue  Gallery.vue  Knowledge.vue  OperationLogs.vue  PlantDetail.vue  Plants.vue  Records.vue  Reminders.vue  Settings.vue  Statistics.vue
