[package]
name = "plant-growth-tracker"
version = "1.0.0"
description = "清新森系风的本地植物生长记录桌面工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "dialog-save", "window-unminimize", "window-unmaximize", "window-close", "fs-write-file", "window-start-dragging", "window-show", "fs-read-file", "fs-create-dir", "path-all", "dialog-open", "window-hide", "dialog-message", "window-minimize", "fs-read-dir", "window-maximize", "fs-remove-file", "notification-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
